# gazebo_ovinf

./: CMakeLists.txt
config/: example.yaml
include/controller/: controller_base.hpp  init_pos.hpp  policy_controller.hpp  zero_pos.hpp
include/filter/: filter_base.hpp  filter_factory.hpp  filter_mean.hpp  filter_pass_through.hpp
include/ovinf/: ovinf.hpp  ovinf_epsilon.h  ovinf_factory.hpp  ovinf_humanoid.h  ovinf_humanoid_stand.h  ovinf_locomotion.h  ovinf_perceptive.h  ovinf_perceptive_2.h  ovinf_perceptive_3.h
include/robot/base/: robot_base.hpp
include/robot/fc2_mj/: robot_fc2_mj.hpp
include/robot/hhfc_cifx/: hhfc_cifx_common.h  robot_hhfc_cifx.hpp
include/robot/hhfc_gz/: hhfc_gz_common.h  robot_hhfc_gz.hpp
include/robot/hhfc_mj/: robot_hhfc_mj.hpp
include/utils/: antiparallelogram.hpp  csv_logger.hpp  history_buffer.hpp  parallel_ankle.hpp  realtime_setting.hpp
src/ovinf/: ovinf_epsilon.cc  ovinf_humanoid.cc  ovinf_humanoid_stand.cc  ovinf_locomotion.cc  ovinf_perceptive.cc  ovinf_perceptive_2.cc  ovinf_perceptive_3.cc
test/: CMakeLists.txt  filter_test.cc  ov_test.cc
